src/ui/app/invocation/snapshots/proqi__ui__app__invocation__tests__reference_tests__invocation_live_narrow_shallow.snap
---
source: src/ui/app/invocation/reference_tests.rs
assertion_line: 495
expression: "snapshots::live_snapshot(30, 6)"
---
00│┌ discovered invocations ──[x]│
01││›                           ││
02││Live in Herdr               ││
03││reviewer        Product · p9││
04││builder  Implementation · p7││
05│└────────────────────────────┘│
